# rvi

./: Cargo.toml  Makefile  README.md
assets/completions/: _rmore.ps1.in  rmore.bash.in  rmore.fish.in  rmore.zsh.in
assets/manual/: rmore.1.in
common/: Cargo.toml
common/src/: lib.rs
rmore/: Cargo.toml
rmore/src/: bytereader.rs  main.rs
rvi/: Cargo.toml
rvi/src/: main.rs
src/: area.rs  bytereader.rs  config.rs  consts.rs  error.rs  input.rs  lib.rs  main.rs
util/: Cargo.toml
util/src/: config.rs  consts.rs  lib.rs  simple.rs
