[workspace.package]
description = "A rust bvi clone."
version = "0.10.0"
authors = ["Mile Davidovic <mile.davidovic@gmail.com>"]
edition = "2024"
repository = "https://github.com/d4v1d0v1c/rvi"
readme = "README.md"
keywords = ["rmore", "rvi", "hex", "bmore", "bvi"]
categories = ["command-line-utilities"]
license-file = "LICENSE.txt"
resolver = "3"

[workspace]
members = [ "rvi", "rmore", "util"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
