[package]
authors = ["Mile Davidovic <mile.davidovic@gmail.com>"]
categories = ["command-line-utilities"]
description = "A rust bmore clone."
homepage = "https://github.com/d4v1d0v1c/rvi"
repository = "https://github.com/d4v1d0v1c/rvi"
name = "rmore"
edition = "2024"
license-file = "LICENSE"
version = "0.10.0"
keywords = ["rmore", "hex", "bmore"]
build = "build/main.rs"

[features]
default = ["application"]

application = [
    "bugreport",
    "minimal-application",
]

minimal-application = [
    "etcetera",
    "clap",
    "wild",
]

[dependencies]
termion = { version = "1" }
bugreport = { version = "0.5.0", optional = true }
etcetera = { version = "0.10.0", optional = true }
thiserror = "2.0"
nu-ansi-term = "0.50.0"
once_cell = "1.20"
wild = { version = "2.2", optional = true }
content_inspector = "0.2.4"
clircle = { version = "0.6.1", default-features = false }

[dependencies.clap]
version = "4.4.12"
optional = true
features = ["wrap_help", "cargo"]

[build-dependencies]
anyhow = "1.0.97"

[profile.release]
lto = true
strip = true
codegen-units = 1

