[package]
name = "rmore"
version = "0.10.0"
authors = ["Mile Davidovic <mile.davidovic@gmail.com>"]
description = "A rust bmore clone."
edition = "2024"
repository = "https://github.com/d4v1d0v1c/rvi"
keywords = ["rmore", "rvi", "hex", "bmore", "bvi"]
categories = ["command-line-utilities"]

[dependencies]
util  = { version = "0.10.0", path = "../util" }
termion = { version = "1" }